gccida/g0/add_pure_or_virtual_attribute
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/add_pure_or_virtual_attribute/src/dwarf2out.c:9944:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/add_pure_or_virtual_attribute/src/obj/dwarf2out.o] Error 1
